--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "gulp-svgmin": "^3.0.0"
   },
   "dependencies": {
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
     "jquery-form-styler": "^2.0.2",
-    "parallax-imagescroll": "^0.2.3",
-    "rateyo": "^2.3.5",
     "magnific-popup": "^1.1.0",
     "normalize.css": "^8.0.1",
+    "parallax-imagescroll": "^0.2.3",
+    "rateyo": "^2.3.5",
     "slick-carousel": "^1.8.1"
   }
 }
